src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ActivityAgreementNumber__c</fullName>
        <label>Activity Agreement Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claim Professionals</fullName>
                </value>
                <value>
                    <fullName>Nurses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEUType__c</fullName>
        <label>CEU Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WC</fullName>
                </value>
                <value>
                    <fullName>CCM</fullName>
                </value>
                <value>
                    <fullName>Nursing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEUsrequested__c</fullName>
        <inlineHelpText>Continuing Education Units (CEUs) requested?</inlineHelpText>
        <label>CEUs requested?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRRAssigned__c</fullName>
        <label>CRR Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kerry Hennessy</fullName>
                </value>
                <value>
                    <fullName>Adam Thomas</fullName>
                </value>
                <value>
                    <fullName>Cathan Cokas</fullName>
                </value>
                <value>
                    <fullName>Miguel Alcocer</fullName>
                </value>
                <value>
                    <fullName>Chris Evans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canweuseourownequipment__c</fullName>
        <inlineHelpText>Including laptop to deliver presentation?</inlineHelpText>
        <label>Can we use our own equipment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassEndTime__c</fullName>
        <label>Class End Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClassStartTime__c</fullName>
        <label>Class Start Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClassTopic__c</fullName>
        <label>Class Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Classlocationstreetaddress__c</fullName>
        <label>Class location street address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyContactNameandTitle__c</fullName>
        <label>Company Contact Name and Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>input Referring Company Contact email address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployerDemographic__c</fullName>
        <label>Employer Demographic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Foodtobeprovided__c</fullName>
        <label>Food to be provided?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ifnospecificsofequipmentrequired__c</fullName>
        <inlineHelpText>If no, please provide specifications of equipment required to use</inlineHelpText>
        <label>If no, specifics of equipment required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ifyes__c</fullName>
        <label>If, yes?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Refreshments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstructorCaseManagerAssigned__c</fullName>
        <label>Instructor/Case Manager Assigned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaxHoursPreApproved__c</fullName>
        <label>Max Hours Pre-Approved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <inlineHelpText>input Referring Company Contact phone number</inlineHelpText>
        <label>Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NumberofAttendees__c</fullName>
        <label>Number of Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReferralDate__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpecialConsiderationsInstructions__c</fullName>
        <label>Special Considerations/Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StreetAddressCSZ__c</fullName>
        <inlineHelpText>input Customer address</inlineHelpText>
        <label>Street Address, CSZ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechnologyRemotebroadcast__c</fullName>
        <label>Technology - Remote broadcast?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeofInsured__c</fullName>
        <inlineHelpText>Select type of Insured</inlineHelpText>
        <label>Type of Insured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Direct Insurer</fullName>
                </value>
                <value>
                    <fullName>Self Insured Employer</fullName>
                </value>
                <value>
                    <fullName>Self-Insured / Self-Administered</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ofhours__c</fullName>
        <label># of hours</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>TOT_AMOUNT_ALL</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>